@@ -66,11 +66,11 @@ Files: dh_systemd_enable dh_systemd_start
 Copyright: 2013 Michael Stapelberg
 License: BSD-3-clause
 
-Files: Debian/Debhelper/Buildsystem* Debian/Debhelper/Dh_Buildsystems.pm
+Files: lib/Debian/Debhelper/Buildsystem* lib/Debian/Debhelper/Dh_Buildsystems.pm
 Copyright: 2008-2009 Modestas Vainius
 License: GPL-2+
 
-Files: Debian/Debhelper/Buildsystem/qmake.pm
+Files: lib/Debian/Debhelper/Buildsystem/qmake.pm
 Copyright: 2010 Kel Modderman
 License: GPL-2+
 
