@@ -60,7 +60,7 @@ my %options = (
 );
 make_path($sourcedir, $builddir);
 use Config;
-my $libpath = $ENV{AUTOPKGTEST_TMP} ? $Config{vendorlib} : $Test::DH::ROOT_DIR;
+my $libpath = $ENV{AUTOPKGTEST_TMP} ? $Config{vendorlib} : "$Test::DH::ROOT_DIR/lib";
 my @bs = load_all_buildsystems([ $libpath ], %options);
 my %bs;
 my @names = map { $_->NAME() } @bs;
