@@ -12,7 +12,7 @@ my $binpath = $ENV{AUTOPKGTEST_TMP} ? '/usr/bin' : '../..';
 print OUT <<EOF;
 #!/usr/bin/make -f
 %:
-	PATH=../..:\$\$PATH PERL5LIB=../.. $binpath/dh \$@ --without autoreconf
+	PATH=../..:\$\$PATH PERL5LIB=../../lib $binpath/dh \$@ --without autoreconf
 
 override_dh_update_autotools_config override_dh_strip_nondeterminism:
 
