@@ -34,6 +34,11 @@ debhelper (10.7.3) UNRELEASED; urgency=medium
     requirements are satisfied in oldoldstable.
   * dh_installdocs: Merge two chmod calls to save a fork+exec.
 
+  [ Geoffrey Thomas ]
+  * Support building debhelper on case-insensitive filesystems by
+    moving the Debian (perl package) to the lib subdirectory.
+    (Closes: #873043)
+
  -- Niels Thykier <niels@thykier.net>  Thu, 03 Aug 2017 19:30:01 +0000
 
 debhelper (10.7.2) unstable; urgency=medium
